make the button on mobile devices appear correctly

--- a/style.css
+++ b/style.css
@@ -187,6 +187,17 @@
     padding: 13px 20px;
   }
 }
+
+@media all and (max-width:767px) {
+  .contact_button {
+    display:flex;
+    justify-content:center;
+  }
+  .contact_button_mobile{
+    display: block;
+    width: 200px;
+  }
+}
 /*======================================================================================*/
 
 /* ************************************************* */
